--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/Create.cshtml
@@ -1,30 +1,27 @@
 ﻿@{
     ViewBag.Title = "MediaRequestCreate";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-@Scripts.Render("~/bundles/jquery")
-
-@*Set title as per user role*@
-@if (ViewBag.UserRole == "user")
+    Layout = "~/Views/Shared/_Layout.cshtml";}
+@Scripts.Render("~/bundles/jquery") @*Set title as per user role*@
+@if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
 { 
-    <h2>Media Request: Search for Account</h2>
+
+    <h2>
+        Media Request: Search for Account</h2>
 }
 else
 {
-    <h2>Media Request</h2> 
-}
 
-@Html.Hidden("userId", (string)(@ViewBag.UserID))
-@Html.Hidden("agencyId", (string)(@ViewBag.AgencyID))
-@Html.Hidden("hdnUserRole", (string)(@ViewBag.UserRole))
-@Html.Hidden("hdnId", (string)(@ViewBag.Id))
+    <h2>
+        Media Request</h2> 
+}
+@Html.Hidden("userId", (string)(@ViewBag.UserID)) @Html.Hidden("agencyId", (string)(@ViewBag.AgencyID))
+@Html.Hidden("hdnUserRole", (string)(@ViewBag.UserRole)) @Html.Hidden("hdnId", (string)(@ViewBag.Id))
 @Html.Hidden("hdnAccount", (string)(@ViewBag.Account))
 <div id="messageSummary" style="font-size: small">
     <ul>
     </ul>
 </div>
-
-<div id="pimsResults" style="font-size: small;display:none">
+<div id="pimsResults" style="font-size: small; display: none">
     <table style="text-align: center">
         <tr>
             <th>
@@ -69,8 +66,7 @@ else
         </tbody>
     </table>
 </div>
-
-<div id="statementMediaTypeConstraint" style="font-size: small; display:none">
+<div id="statementMediaTypeConstraint" style="font-size: small; display: none">
     <table style="width: 100%">
         <tr>
             <td colspan="5">
@@ -106,10 +102,27 @@ else
             </td>
         </tr>
         <tr>
-            @if (ViewBag.UserRole == "user")
-            {<td style="width: 30%; text-align: left">PIMS Account Number</td> }
+            <td style="width: 30%; text-align: left">
+                Agency Name
+            </td>
+            <td style="width: 1%; text-align: center">
+                :
+            </td>
+            <td style="width: 69%; text-align: left">
+                <select data-bind="options:agencies,optionsValue:'Value', optionsCaption:' ',optionsText: 'Text', value: agency,disable:agenciesDisable">
+                </select>*
+            </td>
+        </tr>
+        <tr>
+            @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
+            {<td
+                style="width: 30%; text-align: left">
+                PIMS Account Number
+                </td> }
             else
-            {<td style="width: 30%; text-align: left">Client Account Number</td> }
+            {<td style="width: 30%; text-align: left">
+                    Client Account Number
+                </td> }
             <td style="width: 1%; text-align: center">
                 :
             </td>
@@ -158,7 +171,7 @@ else
             </td>
         </tr>
     </table>
-    <table class="searchtable" style="width: 60%; display:none" data-bind="visible:pimsDataAvailable">
+    <table class="searchtable" style="width: 60%; display: none" data-bind="visible:pimsDataAvailable">
         <tr>
             <td colspan="2" style="width: 100%; background-color: #1f497d; display: none">
                 <a href="#" style="text-decoration: none; font-weight: bold; color: white" data-bind="click:showHidePimsData">
@@ -166,11 +179,15 @@ else
             </td>
         </tr>
         <tr>
-             @if (ViewBag.UserRole == "user")
-             {<td colspan="2"><b>Verify the Account Information to Initiate the Media Request</b></td> }
-             else
-             {<td colspan="2"><b>Verify Client Account Data to View Available Media</b></td> }
-            
+            @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
+            {<td
+                colspan="2">
+                <b>Verify the Account Information to Initiate the Media Request</b>
+                </td> }
+            else
+            {<td colspan="2">
+                    <b>Verify Client Account Data to View Available Media</b>
+                </td> }
         </tr>
         <tr>
             <td colspan="2">
@@ -185,41 +202,44 @@ else
                         <td data-bind="text:portfolio" style="text-align: left; width: 69%">
                         </td>
                     </tr>
-                    @if (ViewBag.UserRole == "user")
+                    @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
                     { 
-                    <tr>
-                        <td style="text-align: left; width: 30%">
-                            Original Lender / Product
-                        </td>
-                        <td style="text-align: center; width: 1%">
-                            :
-                        </td>
-                        <td data-bind="text:lender" style="text-align: left; width: 69%">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left; width: 30%">
-                            SSN
-                        </td>
-                        <td style="text-align: center; width: 1%">
-                            :
-                        </td>
-                        <td data-bind="text:ssn" style="text-align: left; width: 69%">
-                        </td>
-                    </tr>
+
+                        <tr>
+                            <td style="text-align: left; width: 30%">
+                                Original Lender / Product
+                            </td>
+                            <td style="text-align: center; width: 1%">
+                                :
+                            </td>
+                            <td data-bind="text:lender" style="text-align: left; width: 69%">
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td style="text-align: left; width: 30%">
+                                SSN
+                            </td>
+                            <td style="text-align: center; width: 1%">
+                                :
+                            </td>
+                            <td data-bind="text:ssn" style="text-align: left; width: 69%">
+                            </td>
+                        </tr>
                     }
-                    @if (ViewBag.UserRole != "user")
+                    @if (ViewBag.UserRole != "user" || ViewBag.UserRole == "mediaAdmin")
                     { 
-                    <tr>
-                        <td style="text-align: left; width: 30%">
-                            Account Holder's Name
-                        </td>
-                        <td style="text-align: center; width: 1%">
-                            :
-                        </td>
-                        <td data-bind="text:name" style="text-align: left; width: 69%">
-                        </td>
-                    </tr>
+
+                        <tr>
+                            <td style="text-align: left; width: 30%">
+                                Account Holder's Name
+                            </td>
+                            <td style="text-align: center; width: 1%">
+                                :
+                            </td>
+                            <td data-bind="text:name" style="text-align: left; width: 69%">
+                            </td>
+                        </tr>
                     }
                     <tr>
                         <td style="text-align: left; width: 30%">
@@ -254,36 +274,49 @@ else
                 </table>
             </td>
         </tr>
-        <tr><td colspan="2" class="dummyitem">&nbsp;</td></tr>
-        @if (ViewBag.UserRole != "user")
+        <tr>
+            <td colspan="2" class="dummyitem">
+                &nbsp;
+            </td>
+        </tr>
+        @if (ViewBag.UserRole != "user" && ViewBag.UserRole != "mediaAdmin")
         {
+
             <tr>
                 <td colspan="2" style="text-align: right">
                     <input type="button" class="editButton" value="&nbsp;View Media&nbsp;" data-bind="click:viewMedia" />
                 </td>
             </tr>
         }
-        @if (ViewBag.UserRole == "user")
+        @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
         { 
+
             <tr>
                 <td style="text-align: left">
-                    <input type="button" class="editButton" value="&nbsp;Search for Another Account&nbsp;" data-bind="click:searchForAnother" />
+                    <input type="button" class="editButton" value="&nbsp;Search for Another Account&nbsp;"
+                        data-bind="click:searchForAnother" />
                 </td>
                 <td style="text-align: right">
-                    <input type="button" class="editButton" value="&nbsp;Initiate Media Request&nbsp;" data-bind="click:viewMedia" />
+                    <input type="button" class="editButton" value="&nbsp;Initiate Media Request&nbsp;"
+                        data-bind="click:viewMedia" />
                 </td>
-        
             </tr>
         }
     </table>
     <table class="dummyitem">
     </table>
-    <table class="FollowupDatatable" data-bind="visible:showMediaTypeSelection" style="width: 60%; display:none">
+    <table class="FollowupDatatable" data-bind="visible:showMediaTypeSelection" style="width: 60%;
+        display: none">
         <tr>
-             @if (ViewBag.UserRole == "user")
-             {<td colspan="2">Select all Media to request for this Account</td> }
-             else
-             {<td colspan="2">Select Media Type and Click "Submit" (Note: Media Shown is Immediately Available)</td> }
+            @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
+            {<td
+                colspan="2">
+                Select all Media to request for this Account
+                </td> }
+            else
+            {<td colspan="2">
+                    Select Media Type and Click "Submit" (Note: Media Shown is Immediately Available)
+                </td> }
         </tr>
         <tr>
             <td colspan="2">
@@ -300,7 +333,8 @@ else
                             </td>
                             <td style="width: 27%" data-bind="text: text, attr:{for: 'mediaType'+ value}">
                             </td>
-                            <td style="width:20%" data-bind="text:typeConstraintsTxt"></td>
+                            <td style="width: 20%" data-bind="text:typeConstraintsTxt">
+                            </td>
                             <td style="width: 70%">
                                 <span data-bind="text:documents"></span>
                             </td>
@@ -310,25 +344,31 @@ else
             </td>
         </tr>
         <tr>
-             @if (ViewBag.UserRole == "user")
-             {
-                 <td style="text-align: left">
-                    <input type="button" class="editButton" value="&nbsp;Submit Request&nbsp;& Exit" data-bind="click:submit,visible:showSubmit" />
-                 </td>
-                 <td style="text-align: right">
-                    <input type="button" class="editButton" value="&nbsp;Submit Request &nbsp;& Search More Accounts" data-bind="click:submitRequestMore,visible:showSubmit" />
-                 </td>
-             }
-             else
-             {
-                 <td style="text-align: left">
+            @if (ViewBag.UserRole == "user" || ViewBag.UserRole == "mediaAdmin")
+            {
+
+                <td style="text-align: left">
+                    <input type="button" class="editButton" value="&nbsp;Submit Request&nbsp;& Exit"
+                        data-bind="click:submit,visible:showSubmit" />
+                </td>
+
+                <td style="text-align: right">
+                    <input type="button" class="editButton" value="&nbsp;Submit Request &nbsp;& Search More Accounts"
+                        data-bind="click:submitRequestMore,visible:showSubmit" />
+                </td>
+            }
+            else
+            {
+
+                <td style="text-align: left">
                     <input type="button" class="editButton" value="&nbsp;Submit&nbsp;& Exit" data-bind="click:submit,visible:showSubmit" />
-                 </td> 
-                 <td style="text-align: right">
-                    <input type="button" class="editButton" value="&nbsp;Submit&nbsp;& Request More" data-bind="click:submitRequestMore,visible:showSubmit" />
-                 </td>
-             }
-            
+                </td> 
+
+                <td style="text-align: right">
+                    <input type="button" class="editButton" value="&nbsp;Submit&nbsp;& Request More"
+                        data-bind="click:submitRequestMore,visible:showSubmit" />
+                </td>
+            }
         </tr>
     </table>
 </div>
