--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
@@ -239,6 +239,7 @@
             <li><a href="#notesTab">Notes</a></li>
         </ul>
         <div id="salesTab" data-bind="with: salesTabVM">
+            
             <table class="tblCommon">
                 <tr>
                     <td style="width: 90%">
@@ -488,7 +489,72 @@
             <div data-bind="fadeVisible:showMessage" style="background-color: #1f497d; color: #fff;text-align:center"><span data-bind="text:message"></span></div>
                     </div>
 
-        <div id="investmentsTab">
+        <div id="investmentsTab" data-bind="with:investmentsTabVM">
+            <input style="float:right" type="button" class="editButton" value="  Add New  " data-bind="click:addNewInvestment" />                      
+            <table>
+                    <tr>
+                        <td style="text-align: right; width: 20%">Portfolio Number</td>
+                        <td style="width: 2%">:</td>
+                        <td style="text-align: left; width: 20%">
+                            <input type="text" id="portfolioNumber-invest" data-bind="enable:false,value:currentInvestmentRecord().portfolioNumber" /></td>
+
+                        <td style="text-align: right; width: 20%">Investor</td>
+                        <td style="width: 2%">:</td>
+                        <td style="text-align: left; width: 36%">
+                            <select data-bind="options:investors,optionsValue:'Value', optionsText: 'Text', value: currentInvestmentRecord().investor">
+                            </select></td>
+                    </tr>
+                    <tr>
+                <td style="text-align: right; width: 20%">Profit Share Before</td>
+                <td style="width: 2%">:</td>
+                <td style="text-align: left; width: 20%">
+                    <input type="text" id="profiteShareBefore" data-bind="value:currentInvestmentRecord().prftShareBfr" /></td>
+
+                <td style="text-align: right; width: 20%">Profit Share After</td>
+                <td style="width: 2%">:</td>
+                <td style="text-align: left; width: 36%">
+                    <input type="text" id="profitShareAfter" data-bind="value:currentInvestmentRecord().prftShareAftr" /></td>
+            </tr>
+                    <tr>
+                <td style="text-align: right; width: 20%">Contribution</td>
+                <td style="width: 2%">:</td>
+                <td style="text-align: left; width: 20%">
+                    <input type="text" id="contribution" data-bind="value:currentInvestmentRecord().contribution" /></td>
+
+                <td style="text-align: right; width: 20%">Interest Rate</td>
+                <td style="width: 2%">:</td>
+                <td style="text-align: left; width: 36%">
+                    <input type="text" id="interestRate" data-bind="value:currentInvestmentRecord().interestRate" /></td>
+            </tr>
+                    <tr>
+
+                <td style="text-align: right; width: 20%">Notes</td>
+                <td style="width: 2%">:</td>
+                <td style="text-align: left; width: 36%" colspan=4>
+                    <textarea id="notes-invest" rows="5" cols="30" data-bind="value:currentInvestmentRecord().notes"></textarea></td>
+            </tr>
+                    <tr>
+                <td colspan="6" style="text-align: center">
+                    <img src="~/Content/images/back_enabled.jpg" data-bind="click:previousRecord,visible:visiblePrevious" />&nbsp;<span data-bind="text:recordCounts"></span> &nbsp;
+                    <img src="~/Content/images/forward_enabled.jpg" data-bind="click:nextRecord,visible:visibleNext" /></td>
+            </tr>
+                    <tr style="background-color: #1f497d">
+                <td colspan="6">
+                    <table style="width: 100%; border-color: white; border-style: solid; border-width: 2px">
+                        <tr>
+                            <td style="text-align: right; width: 88%; color: #fff">Total Contributions</td>
+                            <td style="text-align: right; width: 2%; color: #fff">:</td>
+                            <td style="text-align: left; width: 10%; color: #fff"><span data-bind="text:totalContributions"></span></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+                    <tr>
+                <td colspan="6" style="text-align: center">
+                    <img src="~/Content/images/savebutton.png" data-bind="click:saveRecord" />
+                </td>
+            </tr>
+            </table>
         </div>
         <div id="distributionsTab">
         </div>
@@ -506,6 +572,7 @@
     <script src="~/Scripts/portfolioLookups.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioSales.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioCollections.js" type="text/javascript"></script>
+    <script src="~/Scripts/portfolioInvestment.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioPurchaseSummary.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolio.js" type="text/javascript"></script>
     <script type="text/javascript">
