--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
@@ -220,7 +220,7 @@
                     <table>
                         <tr>
                             <td style="text-align: center">
-                                <img src="~/Content/images/savebutton.png" data-bind="click:saveMainRecord, visible:saveVisible" />
+                                <img src="~/Content/images/savebutton.png" data-bind="click:saveMainRecord" />
                             </td>
                         </tr>
                     </table>
@@ -229,7 +229,7 @@
         </table>
     </div>
     <br />
-    <div id="portfolioDetailsSection" data-bind="not: {visible:portfolioBlankScenario}">
+    <div id="portfolioDetailsSection">
         <ul>
             <li><a href="#salesTab">Sales</a></li>
             <li><a href="#collectionsTab">Collections</a></li>
@@ -239,7 +239,7 @@
             <li><a href="#notesTab">Notes</a></li>
         </ul>
         <div id="salesTab" data-bind="with: salesTabVM">
-            
+            <input style="float:right" type="button" class="editButton" value="  Add New  " data-bind="click:addNewSales" />                                  
             <table class="tblCommon">
                 <tr>
                     <td style="width: 90%">
@@ -289,7 +289,7 @@
                                     :
                                 </td>
                                 <td style="border: 0px solid red; text-align: left; width: 23%">
-                                    <input type="text" id="saleDate" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().cutoffDt" />
+                                    <input type="text" id="saleDate" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().cutoffDt" />
                                 </td>
                             </tr>
                             <tr>
@@ -300,7 +300,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 35%">
-                                    <select data-bind="options:buyers,optionsValue:'Value', optionsText: 'Text',optionsCaption: ' ', value: currentSalesRecord().buyer">
+                                    <select data-bind="options:buyers,optionsValue:'Value', optionsText: 'Text', value: currentSalesRecord().buyer">
                                     </select>
                                 </td>
                                 <td style="text-align: right; width: 15%">
@@ -310,7 +310,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 23%">
-                                    <input type="text" id="cutOffDate" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().cutoffDt" />
+                                    <input type="text" id="cutOffDate" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().cutoffDt" />
                                 </td>
                             </tr>
                             <tr>
@@ -321,7 +321,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 35%">
-                                    <input type="text" id="salesBasis" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().salesBasis" />
+                                    <input type="text" id="salesBasis" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().salesBasis" />
                                 </td>
                                 <td style="text-align: right; width: 15%">
                                     PutbackTerm(Days)
@@ -330,7 +330,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 23%">
-                                    <select id="putbackTerms" data-bind="options:putbackTerms,optionsValue:'Value', optionsText: 'Text',optionsCaption: ' ', value: currentSalesRecord().putbackTerm">
+                                    <select id="putbackTerms" data-bind="options:putbackTerms,optionsValue:'Value', optionsText: 'Text',value: currentSalesRecord().putbackTerm"
                                     </select>
                                 </td>
                             </tr>
@@ -342,7 +342,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 35%">
-                                    <input type="text" id="faceValue-sales" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().faceValue" />
+                                    <input type="text" id="faceValue-sales" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().faceValue" />
                                 </td>
                                 <td style="text-align: right; width: 15%">
                                     PutbackDeadline
@@ -351,7 +351,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 23%">
-                                    <input type="text" id="putbackDeadline-sales" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().putbackDeadline" />
+                                    <input type="text" id="putbackDeadline-sales" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().putbackDeadline" />
                                 </td>
                             </tr>
                             <tr>
@@ -362,7 +362,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 35%">
-                                    <input type="text" id="salesPrice-sales" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().salesPrice" />
+                                    <input type="text" id="salesPrice-sales" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().salesPrice" />
                                 </td>
                                 <td style="text-align: right; width: 15%">
                                     Number Of Accounts
@@ -371,7 +371,7 @@
                                     :
                                 </td>
                                 <td style="text-align: left; width: 23%">
-                                    <input type="text" id="accounts" data-bind="enable:$parent.portfolioEditableFields,value:currentSalesRecord().accounts" />
+                                    <input type="text" id="accounts" data-bind="enable:portfolioSalesEditableFields,value:currentSalesRecord().accounts" />
                                 </td>
                             </tr>
                             <tr>
@@ -405,7 +405,7 @@
                         <table>
                             <tr>
                                 <td colspan="6" style="text-align: center">
-                                    <img src="~/Content/images/savebutton.png" data-bind="click:saveRecord, visible:saveVisible" />
+                                    <img src="~/Content/images/savebutton.png" data-bind="click:saveRecord" />
                                 </td>
                             </tr>
                         </table>
