--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
@@ -220,7 +220,7 @@
                     <table>
                         <tr>
                             <td style="text-align: center">
-                                <img src="~/Content/images/savebutton.png" data-bind="click:saveMainRecord" />
+                                <img src="~/Content/images/savebutton.png" data-bind="click:$parent.savePurchaseSummary" />
                             </td>
                         </tr>
                     </table>
@@ -258,18 +258,6 @@
                                 </td>
                                 <td style="text-align: left" colspan="4">
                                     <input type="text" id="portfolioNumber-sales" data-bind="enable:false,value:currentSalesRecord().portfolioNumber" />
-                                </td>
-                            </tr>
-                            <tr data-bind="visible:currentSalesRecord().Id != ''">
-                                <td style="text-align: right; width: 25%">
-                                    Sales Batch #
-                                </td>
-                                <td style="width: 1%">
-                                    :
-                                </td>
-                                <td style="text-align: left" colspan="4">
-                                    <select data-bind="options:salesRecords,optionsValue:'salesBatch', optionsText: 'salesBatch', value: salesBatchSelected">
-                                    </select>
                                 </td>
                             </tr>
                             <tr>
@@ -552,6 +540,13 @@
                     <tr>
                 <td colspan="6" style="text-align: center">
                     <img src="~/Content/images/savebutton.png" data-bind="click:saveRecord" />
+                </td>
+            </tr>
+            <tr>
+                <td colspan="6" style="text-align: center">
+                    <div data-bind="fadeVisible:showMessage" style="background-color: #1f497d; color: #fff">
+                        <span data-bind="text:message"></span>
+                    </div>
                 </td>
             </tr>
             </table>
