--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/AddForm/Index.cshtml
@@ -551,9 +551,148 @@
             </tr>
             </table>
         </div>
-        <div id="distributionsTab">
+
+        <div id="distributionsTab" data-bind="with:distributionsTabVM">
+            <input style="float:right" type="button" class="editButton" value="  Add New  " data-bind="click:addNewDistribution" />                      
+            <table>
+                <tr>
+                    <td style="text-align: right; width: 20%">Portfolio Number</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 20%">
+                        <input type="text" id="portfolioNumber-distn" data-bind="enable:false,value:currentDistributionRecord().portfolioNumber" /></td>
+
+                    <td style="text-align: right; width: 20%">Investor</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 36%">
+                        <select data-bind="options:investors,optionsValue:'Value', optionsText: 'Text',optionsCaption: ' ', value: currentDistributionRecord().investor">
+                        </select></td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; width: 20%">Check#</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 20%">
+                        <input type="text" id="checkNo" data-bind="value:currentDistributionRecord().checkNumber" /></td>
+
+                    <td style="text-align: right; width: 20%">Closing Date</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 36%">
+                        <input type="text" id="closingDt-Distn" data-bind="value:currentDistributionRecord().closingDt" /></td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; width: 20%">Distribution</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 20%">
+                        <input type="text" id="distribution" data-bind="value:currentDistributionRecord().distribution" /></td>
+
+                    <td style="text-align: right; width: 20%">Trans Type</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left; width: 36%">
+                        <select data-bind="enable:false,options:distributionTransTypes,optionsValue:'Value', optionsText: 'Text',optionsCaption: ' ', value:currentDistributionRecord().distributionTransType">
+                        </select></td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; width: 20%">Notes</td>
+                    <td style="width: 2%">:</td>
+                    <td style="text-align: left" colspan="4">
+                        <textarea id="notes-distn" rows="5" cols="30" data-bind="value:currentDistributionRecord().notes"></textarea></td>
+                </tr>
+
+                <tr>
+                    <td colspan="6" style="text-align: center">
+                        <img src="~/Content/images/back_enabled.jpg" data-bind="click:previousRecord,visible:visiblePrevious" />&nbsp;<span data-bind="text:recordCounts"></span> &nbsp;
+                        <img src="~/Content/images/forward_enabled.jpg" data-bind="click:nextRecord,visible:visibleNext" /></td>
+                </tr>
+                <tr style="background-color: #1f497d">
+                    <td colspan="6">
+                        <table style="width: 100%; border-color: white; border-style: solid; border-width: 2px">
+                            <tr>
+                                <td style="text-align: right; width: 88%; color: #fff">Total Distributions</td>
+                                <td style="text-align: right; width: 2%; color: #fff">:</td>
+                                <td style="text-align: left; width: 10%; color: #fff"><span data-bind="text:totalDistributions"></span></td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="6" style="text-align: center">
+                        <img src="~/Content/images/savebutton.png" data-bind="click:saveRecord" />
+                    </td>
+                </tr>
+            <tr>
+                <td colspan="6" style="text-align: center">
+                    <div data-bind="fadeVisible:showMessage" style="background-color: #1f497d; color: #fff">
+                        <span data-bind="text:message"></span>
+                    </div>
+                </td>
+            </tr>
+            </table>
         </div>
-        <div id="interestTab">
+        <div id="interestTab"  data-bind="with:interestTabVM">
+            <input style="float:right" type="button" class="editButton" value="  Add New  " data-bind="click:addNewInterest" />                      
+            <div data-bind="with: currentInterestRecord">
+                            <table>
+                                <tr>
+                                    <td style="text-align: right; width: 20%">Closing Date</td>
+                                    <td style="width: 2%">:</td>
+                                    <td style="text-align: left; width: 36%">
+                                        <input type="text" id="closingDate-int" data-bind="value:closingDt" /></td>
+                                    <td style="text-align: right; width: 20%">Portfolio Number</td>
+                                    <td style="width: 2%">:</td>
+                                    <td style="text-align: left; width: 20%">
+                                        <input type="text" id="portfolioNumber-int" data-bind="enable:false,value:portfolioNumber" /></td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: right; width: 20%">Agency Name</td>
+                                    <td style="width: 2%">:</td>
+                                    <td style="text-align: left" colspan="4">
+                                        <select data-bind="options:$parent.agencies,optionsValue:'Value', optionsText: 'Text',optionsCaption: ' ', value: $parent.selectedAgency">
+                                        </select></td>
+
+                                </tr>
+                                <tr>
+                                    <td style="text-align: right; width: 20%">Sales Price</td>
+                                    <td style="width: 2%">:</td>
+                                    <td style="text-align: left; width: 36%">
+                                        <input type="text" id="salesPrice" data-bind="value:salesPrice" /></td>
+                                    <td style="text-align: right; width: 20%">Check#</td>
+                                    <td style="width: 2%">:</td>
+                                    <td style="text-align: left; width: 20%">
+                                        <input type="text" id="checkNumber" data-bind="value:checkNumber" /></td>
+
+                                </tr>
+                                <tr>
+                                    <td colspan="6" style="text-align: center">
+                                        <img src="~/Content/images/savebutton.png" data-bind="click:$parent.saveRecord" />
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div style="width: 100%; height: 300px; overflow: auto;">
+                    <table id="interestGrid" class="portfolioGrid">
+                                <thead>
+                                    <tr>
+                                        <th style="width: 20%">Portfolio Number</th>
+                                        <th style="width: 20%">Closing Date</th>
+                                        <th style="width: 20%">Agency</th>
+                                        <th style="width: 20%">Sales Price</th>
+                                        <th style="width: 20%">Check#</th>
+                                    </tr>
+                                </thead>
+                                <tbody data-bind="foreach:interestRecords()">
+                                    <tr data-bind="click:$parent.selectedRecordIndexChanged">
+                                        <td style="text-align: center" data-bind="text:portfolioNumber"></td>
+                                        <td style="text-align: center" data-bind="text:closingDt"></td>
+                                        <td style="text-align: center" data-bind="text:agencyName"></td>
+                                        <td style="text-align: center" data-bind="text:salesPrice"></td>
+                                        <td style="text-align: center" data-bind="text:checkNumber"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+            </div>
+                        <br />
+                        <p style="background-color: #1f497d; color: #fff; text-align: right">Total interest paid:<span data-bind="text:totalInterest"></span></p>
+
+            
         </div>
         <div id="notesTab">
         </div>
@@ -568,6 +707,8 @@
     <script src="~/Scripts/portfolioSales.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioCollections.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioInvestment.js" type="text/javascript"></script>
+    <script src="~/Scripts/portfolioDistribution.js" type="text/javascript"></script>
+    <script src="~/Scripts/portfolioInterest.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolioPurchaseSummary.js" type="text/javascript"></script>
     <script src="~/Scripts/portfolio.js" type="text/javascript"></script>
     <script type="text/javascript">
