--- a/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/ViewEdit/Reports.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Portfolio/Views/ViewEdit/Reports.cshtml
@@ -1,14 +1,23 @@
 ﻿
-<div class='page-title'>&nbsp;Portfolio Reports</div>
+<div class='page-title' style="font-size:large; font-weight:bold">&nbsp;Portfolio Reports</div>
 
-<div style="height:10px"></div>
+<div style="height:20px"></div>
 
-<div style="margin:5px">@Html.ActionLink("Portfolio Cash Flow", "../../Report.aspx", new { rpt = "PortfolioCashFlow" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Portfolio Cash Position", "../../Report.aspx", new { rpt = "PortfolioCashPosition" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Portfolio Summary", "../../Report.aspx", new { rpt = "PortfolioSummary" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Portfolio Collections Reconciliation", "../../Report.aspx", new { rpt = "CollectionsReconciliation" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Portfolio Transactions", "../../Report.aspx", new { rpt = "PortfolioTransactions" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Purchases", "../../Report.aspx", new { rpt = "Purchases" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Sales", "../../Report.aspx", new { rpt = "Sales" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Report Sales Summary", "../../Report.aspx", new { rpt = "ReportSalesSummary" }, new { target = "_blank" })</div>
-<div style="margin:5px">@Html.ActionLink("Sale Mass Upload", "../../Report.aspx", new { rpt = "SaleMassUpload" }, new { target = "_blank" })</div>
+<div style="margin:5px">@Html.ActionLink("Portfolio Cash Flow", "../../Report.aspx", new { rpt = "PortfolioCashFlow" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Portfolio Cash Position", "../../Report.aspx", new { rpt = "PortfolioCashPosition" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Portfolio Summary", "../../Report.aspx", new { rpt = "PortfolioSummary" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Portfolio Collections Reconciliation", "../../Report.aspx", new { rpt = "CollectionsReconciliation" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Portfolio Transactions", "../../Report.aspx", new { rpt = "PortfolioTransactions" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Purchases", "../../Report.aspx", new { rpt = "Purchases" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Sales", "../../Report.aspx", new { rpt = "Sales" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Report Sales Summary", "../../Report.aspx", new { rpt = "ReportSalesSummary" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+<div style="height:4px"></div>
+<div style="margin:5px">@Html.ActionLink("Sale Mass Upload", "../../Report.aspx", new { rpt = "SaleMassUpload" }, new { target = "_blank", @style = "color:white; font-size:medium" })</div>
+
